--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+ext{
+    versions = [
+            compileSdk : 28,
+            buildTools : '28.0.3',
+            minSdk     : 19,
+            targetSdk  : 28,
+            versionCode: 1,
+            versionName: '1.0.0',
+    ]
+
+}
 buildscript {
-    ext.kotlin_version = '1.3.50'
+
+    ext {
+        kotlin_version = '1.3.72'
+    }
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,6 +37,9 @@ allprojects {
     }
 }
 
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
