--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,16 @@ buildscript {
         kotlin_version = '1.3.72'
     }
     repositories {
-        google()
+        mavenCentral()
+
         jcenter()
+        google()
+        maven { url "https://jitpack.io" }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.novoda:bintray-release:0.9.1'//添加
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -31,8 +35,11 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+
         jcenter()
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
         
     }
 }
