高仿微信QQ 空间动态说说控件及表情解析

--- a/module_room/build.gradle
+++ b/module_room/build.gradle
@@ -45,7 +45,7 @@ publish {
     artifactId = 'room'
     userOrg = 'zhengzaihong'
     groupId = 'com.zzh'
-    uploadName = "roomView"
+    uploadName = "room"
     publishVersion = '0.1.0'
     desc = 'The realization is like QQ, micro blog spatial dynamic wireless hierarchical list'
     website = 'https://github.com/zhengzaihong/CommentWithReply.git'
