--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
+#gradlew clean build bintrayUpload -PbintrayUser=zhengzaihong -PbintrayKey=7aced6be172bfe8d162f06f5ba5ca1609321b54c -PdryRun=false
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
